# GuideGo

./: ai_agent.py  back_end.py  front_end.py  pyproject.toml  requirements.txt
Notebook/: practice.ipynb
Utils/: config_loader.py  model_loader.py
config/: config.yaml
